# Robot-Alignment

./: .gitignore  README.md  cdMo.txt  dev_offset.sh  run_markerless_alignment.desktop  run_markerless_alignment.sh  start_offset.sh  start_offset_xdisp.sh  start_pbvs.sh  start_pbvs_xdisp.sh  terminal_joe.txt
ShellScripts/: dev_offset.sh  run_markerless_alignment.sh  start_offset.sh  (+3 more)
dev_ws/src/dev_cpp/: CMakeLists.txt  package.xml
dev_ws/src/dev_cpp/config/: cdPo.yaml
dev_ws/src/dev_cpp/src/: template_camera.cpp  template_displays.cpp  template_object.cpp  template_offset.cpp  template_robot.cpp
dev_ws/src/dev_py/: package.xml  setup.cfg  setup.py
ra_ws/src/calibration_cpp/: CMakeLists.txt  README.md  package.xml
ra_ws/src/calibration_cpp/config/: 050422071950_1920x1080_intrinsics.yaml  intrinsics_calib.params.yaml  ur_ePt.yaml
ra_ws/src/calibration_cpp/data/intrinsics_20260312_143402_052622072869_1920x1080/: calibration_quality_report.md
ra_ws/src/calibration_cpp/data/intrinsics_20260312_154255_327122073214_1920x1080/: 327122073214_1920x1080_intrinsics.yaml  calibration_quality_report.md
ra_ws/src/calibration_cpp/data/intrinsics_20260312_155258_327122073214_1920x1080/: 327122073214_1920x1080_intrinsics.yaml  calibration_quality_report.md
ra_ws/src/calibration_cpp/data/intrinsics_20260312_160059_050422071950_1920x1080/: calibration_quality_report.md
ra_ws/src/calibration_cpp/data/intrinsics_20260312_160742_327122073214_1920x1080/: calibration_quality_report.md
ra_ws/src/calibration_cpp/include/calibration_cpp/: terminal_io.hpp  transform_math.hpp  yaml_io.hpp
ra_ws/src/calibration_cpp/src/: apriltag_node.cpp  camera_extrinsics_calib.cpp  checkerboard_node.cpp  displays_node.cpp  intrinsics_calib.cpp  pendant_tcp.cpp  rtde_state.cpp  terminal_io.cpp  tooling_extrinsics_calib.cpp  transform_math.cpp  yaml_io.cpp
ra_ws/src/ur_alignment/: CMakeLists.txt  package.xml
ra_ws/src/ur_alignment/config/: camera_intrinsics.yaml  flange_pose_estimator_config.yaml  ur_cdMo copy 2.yaml
ra_ws/src/ur_alignment/data/: ur_pose_cPo.yaml
ra_ws/src/ur_alignment/flange_pose_estimator/holes_edge_extraction/: ellipse_extractor.py  ellipse_fitter.py
ra_ws/src/ur_alignment/flange_pose_estimator/pose_computation/: pose_refiner.py  reconstructor_holes_3D.py
ra_ws/src/ur_alignment/flange_pose_estimator/utility_classes/: hole.py
ra_ws/src/ur_alignment/models/: segmentation_model.pth
ra_ws/src/ur_alignment/src/: apriltags.cpp  d435i_camera.cpp  displays.cpp  kabsch.cpp  markley.cpp  ur_e_series.cpp
ra_ws/src/uralignment_cpp/: CMakeLists.txt  package.xml
ra_ws/src/uralignment_cpp/config/: 327122073214_1920x1080_intrinsics.yaml  cPt.yaml  camera_intrinsics.yaml  ePt.yaml  ur_cdMo.yaml  ur_cdMo_Old.yaml
ra_ws/src/uralignment_cpp/data/: ur_pose_cPo.yaml  ur_pose_fPe.yaml
ra_ws/src/uralignment_cpp/data/tracker_runs/22mm_leftStart_run_20260313_203506/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/22mm_leftStart_run_20260313_203942/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/22mm_leftStart_run_20260313_204127/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/77mm_leftStart_run_20260313_214142/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/77mm_leftStart_run_20260313_214252/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/77mm_leftStart_run_20260313_214359/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/77mm_leftStart_run_20260313_214515/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260213_230426/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260216_191049/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_183552/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_193328/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_194024/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_194659/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_195327/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_195859/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_200740/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_200925/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_210015/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260311_211113/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260312_195117/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260312_195957/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260313_161352/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260313_161958/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260313_163155/: rates.csv
ra_ws/src/uralignment_cpp/data/tracker_runs/run_20260313_163355/: rates.csv
ra_ws/src/uralignment_cpp/include/: markley.h
ra_ws/src/uralignment_cpp/launch/: start_all.launch.py  start_offset.launch.py  start_offset_xdisp.launch.py  start_pbvs.launch.py  start_pbvs_xdisp.launch.py
ra_ws/src/uralignment_cpp/src/: apriltags copy.cpp  apriltags.cpp  d435i_camera.cpp  demo_servo.cpp  displays.cpp  image_subscriber.cpp  offset copy 2.cpp  offset.cpp  teleop_key.cpp  tracker.cpp  ur_e_series.cpp  wrench.cpp
ur_alignment_ws/src/ur_alignment/: CMakeLists.txt  package.xml
ur_alignment_ws/src/ur_alignment/config/: ur_cdMo copy.yaml  ur_eMc.yaml  ur_pose.yaml
ur_alignment_ws/src/ur_alignment/flange_pose_estimator/: __init__.py  flange_pose_estimator.py
ur_alignment_ws/src/ur_alignment/flange_pose_estimator/pose_computation/: matcher_brute_force.py  pose_computation_core.py  pose_computation_pipeline.py
ur_alignment_ws/src/ur_alignment/flange_pose_estimator/utility_classes/: drawer.py  ellipse.py
ur_alignment_ws/src/ur_alignment/include/: kabsch.h
ur_alignment_ws/src/ur_alignment/launch/: markerless_alignment.launch.py
ur_alignment_ws/src/ur_alignment/src/: demo_servo.cpp  ur_e_series.cpp
ur_alignment_ws/src/ur_alignment/user_interface/: user_interface.py
(+69 files in other folders)
